--- a/estilo/style.css
+++ b/estilo/style.css
@@ -135,13 +135,14 @@ h3 span {
 /* Responsividade para celulares */
 @media (max-width: 480px) {
     .compra {
-        padding: 10px;
+        padding: 4px;
+        width: 95.8%;
     }
 
     #valor,
     .option,
     button {
-        padding: 6px;
+        padding: 4px;
     }
 
     h3 span {
@@ -152,12 +153,14 @@ h3 span {
 /* Responsividade para tablets */
 @media (max-width: 768px) {
     .compra {
-        padding: 15px;
+        margin: 0px 5px 0px 5px;
+        padding: 0;
+        width: 97.6%;
     }
 
     #valor,
     .option,
     button {
-        padding: 8px;
+        padding: 5px;
     }
 }
